Use the old concurrent mark sweep garbage collector
Until zgc is available (i.e. when upgrading to jdk 17+), use CMS.

Refs #95586